@@ -12,7 +12,7 @@ BEGIN {
 }
 
 # For each new item in t/data/08_regression add another 15 tests
-use Test::More tests => 677;
+use Test::More tests => 692;
 use Test::NoWarnings;
 use File::Spec::Functions ':ALL';
 use Params::Util '_INSTANCE';
