@@ -1,1 +1,1 @@
-$a //= 1 dor die "foo";
+$a //= 1 // die "foo";
