@@ -6,7 +6,7 @@ PPI::Document
     PPI::Token::Whitespace  	' '
     PPI::Token::Number  	'1'
     PPI::Token::Whitespace  	' '
-    PPI::Token::Operator  	'dor'
+    PPI::Token::Operator  	'//'
     PPI::Token::Whitespace  	' '
     PPI::Token::Word  	'die'
     PPI::Token::Whitespace  	' '
